--- a/base-popup/zh-TW.html
+++ b/base-popup/zh-TW.html
@@ -9,9 +9,16 @@
             自適應手機-平闆-PC
             基本靜態網站模闆
         </title>
-        <!-- version "1.5.2.4 build 20180301.194303" -->
-        <meta name="keywords" content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
-        <meta name="description" content="專業研發、設計、部署、銷售 _ 全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO _ 版權所有 (c) 2017 廣州市德雲數科技有限公司">
+        <!-- version "1.5.3.1 build 20180303.194415" -->
+        <meta name="keywords"
+            content="批處理,全文搜索,人工翻譯,工業4.0,大數據,PLM,ERP,SEO">
+        <meta name="description"
+            content="
+                專業研發、設計、部署、銷售
+                -
+                全數字化企業管理平颱 / 高仿真數字樣機 / 批處理 / 全文搜索 / 人工翻譯 / 工業4.0 / 大數據 / PLM / ERP / SEO
+                -
+                版權所有 (c) 2014-2018 德雲社區">
         <link rel="icon" href="images/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
         <!-- Bootstrap -->
