--- a/orange-red/en-US.html
+++ b/orange-red/en-US.html
@@ -5,13 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            HTML5 Bootstrap 3.3.2
-            Adaptive Mobile-Tablet-PC
-            Orange-red Static Website Template
+            Bootstrap3.3.7
+            -
+            Website Template
+            -
+            Orange-red
         </title>
-        <!-- version "1.5.2.2 build 20180301.194206" -->
-        <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
-        <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
+        <!-- version "1.5.3.2 build 20180303.194842" -->
+        <meta name="keywords"
+            content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
+        <meta name="description"
+            content="
+                Professional research and development, design, deployment, sales
+                -
+                full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO
+                -
+                Copyright (c) 2014-2018 Digits Cloud Community">
         <link rel="icon" href="images/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
         <!-- Bootstrap -->
