--- a/base-popup/en-US/about.html
+++ b/base-popup/en-US/about.html
@@ -7,9 +7,16 @@
         <title>
             About
         </title>
-        <!-- version "0.9.2.7 build 20180301.194533" -->
-        <meta name="keywords" content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
-        <meta name="description" content="Professional research and development, design, deployment, sales _ full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO _ Copyright (c) 2017 China Guangzhou Digits Cloud Technology Co., Ltd.">
+        <!-- version "0.9.3.1 build 20180303.194842" -->
+        <meta name="keywords"
+            content="Batch,Full text search,Manual translate,Industry 4.0,Big data,PLM,ERP,SEO">
+        <meta name="description"
+            content="
+                Professional research and development, design, deployment, sales
+                -
+                full digital enterprise management platform / high simulation digital prototype / batch / full text search / manual translation / industry 4.0 / big data / PLM / ERP / SEO
+                -
+                Copyright (c) 2014-2018 Digits Cloud Community">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
         <!-- Bootstrap -->
