--- a/base-popup/index.html
+++ b/base-popup/index.html
@@ -5,13 +5,22 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>
-            HTML5 Bootstrap 3.3.2
-            自适应手机-平板-PC
-            基本静态网站模板
+            Bootstrap3.3.7
+            -
+            网站模板
+            -
+            基本
         </title>
-        <!-- version "1.5.2.6 build 20180301.193915" -->
-        <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
-        <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
+        <!-- version "1.5.3.3 build 20180303.194453" -->
+        <meta name="keywords"
+            content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
+        <meta name="description"
+            content="
+                专业研发、设计、部署、销售
+                -
+                全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO
+                -
+                版权所有 (c) 2014-2018 德云社区">
         <link rel="icon" href="images/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="images/favicon.png" type="image/png" />
         <!-- Bootstrap -->
