--- a/orange-red-popup/zh-CN/about.html
+++ b/orange-red-popup/zh-CN/about.html
@@ -7,9 +7,16 @@
         <title>
             关于
         </title>
-        <!-- version "0.9.2.8 build 20180301.194524" -->
-        <meta name="keywords" content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
-        <meta name="description" content="专业研发、设计、部署、销售 _ 全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO _ 版权所有 (c) 2017 广州市德云数科技有限公司">
+        <!-- version "0.9.3.2 build 20180303.194453" -->
+        <meta name="keywords"
+            content="批处理,全文搜索,人工翻译,工业4.0,大数据,PLM,ERP,SEO">
+        <meta name="description"
+            content="
+                专业研发、设计、部署、销售
+                -
+                全数字化企业管理平台 / 高仿真数字样机 / 批处理 / 全文搜索 / 人工翻译 / 工业4.0 / 大数据 / PLM / ERP / SEO
+                -
+                版权所有 (c) 2014-2018 德云社区">
         <link rel="icon" href="../images/favicon.png" type="image/png" />
         <link rel="shortcut icon" href="../images/favicon.png" type="image/png" />
         <!-- Bootstrap -->
